tests/errors/incompatible_types.o_0
a : { x : 3 }
value : a + a.x
